--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,11 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
     ports:
-    - "3307:3307"
+    - "3306:3306"
     volumes:
+    #   Será armazenado nesse diretório o conteúdo da imagem
     - devdojo_data:/var/lib/mysql
 
 volumes:
+  #   Referencia do volume usado
   devdojo_data:
